--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "php": ">=5.3.2"
     },
     "require-dev": {
-        "symfony/framework-bundle": ">=2.1,<2.2-dev"
+        "symfony/framework-bundle": "dev-master"
     },
     "autoload": {
         "psr-0": { "huitiemesens\\sonata-admin-generator-bundle": "" }
